--- a/pages/enquiry.html
+++ b/pages/enquiry.html
@@ -7,48 +7,45 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        <h1>Freshlane</h1>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="enquiry.html" class="active">Enquiry</a></li>
-            </ul>
-        </nav>
-    </header>
+<header>
+    <h1>Freshlane</h1>
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="enquiry.html" class="active">Enquiry</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</header>
 
-    <!-- Main Content -->
-    <main>
-        <section class="enquiry-section">
-            <h2>Send Us an Enquiry</h2>
-            <p>Fill out the form below and we will get back to you as soon as possible.</p>
-            <form action="#" method="post">
-                <label for="name">Full Name:</label>
-                <input type="text" id="name" name="name" placeholder="Your Name" required>
+<main>
+    <section class="enquiry-section">
+        <h2>Send Us an Enquiry</h2>
+        <p>Fill out the form below and we will get back to you as soon as possible.</p>
+        <form action="#" method="post">
+            <label for="name">Full Name:</label>
+            <input type="text" id="name" name="name" placeholder="Your Name" required>
 
-                <label for="email">Email Address:</label>
-                <input type="email" id="email" name="email" placeholder="Your Email" required>
+            <label for="email">Email Address:</label>
+            <input type="email" id="email" name="email" placeholder="Your Email" required>
 
-                <label for="subject">Subject:</label>
-                <input type="text" id="subject" name="subject" placeholder="Subject" required>
+            <label for="subject">Subject:</label>
+            <input type="text" id="subject" name="subject" placeholder="Subject" required>
 
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="5" placeholder="Your Message" required></textarea>
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="5" placeholder="Your Message" required></textarea>
 
-                <button type="submit">Send Enquiry</button>
-            </form>
-        </section>
-    </main>
+            <button type="submit">Send Enquiry</button>
+        </form>
+    </section>
+</main>
 
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2025 Freshlane. Walk your lane.</p>
-    </footer>
-    <script src="js/script.js"></script>
-
+<footer>
+    <p>&copy; 2025 Freshlane. Walk your lane.</p>
+</footer>
+<script src="../js/script.js"></script>
 </body>
 </html>
+
