--- a/index.html
+++ b/index.html
@@ -7,79 +7,85 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header>
-    <h1>Freshlane</h1>
-    <div class="hamburger" id="hamburger">☰</div>
-    <nav id="nav-menu">
-        <ul>
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="pages/about.html">About Us</a></li>
-            <li><a href="pages/products.html">Products</a></li>
-            <li><a href="pages/enquiry.html">Enquiry</a></li>
-            <li><a href="pages/contact.html">Contact</a></li>
-        </ul>
-    </nav>
-</header>
+    <!-- Header -->
+    <header>
+        <h1>Freshlane</h1>
+        <div class="hamburger" id="hamburger">☰</div>
+        <nav id="nav-menu">
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="pages/about.html">About Us</a></li>
+                <li><a href="pages/products.html">Products</a></li>
+                <li><a href="pages/enquiry.html">Enquiry</a></li>
+                <li><a href="pages/contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<section id="hero">
-    <h2>Welcome to Freshlane</h2>
-    <p>Your go-to streetwear brand for hoodies & cargo pants. Walk your lane with style!</p>
-    <img src="index.html/freshlane-logo-design.png" alt="Freshlane Streetwear" width="300" height="300">
-</section>
+    <!-- Hero Section -->
+    <section id="hero">
+        <h2>Welcome to Freshlane</h2>
+        <p>Your go-to streetwear brand for hoodies & cargo pants. Walk your lane with style!</p>
+        <img src="Images/Freshlane-Logo-Design.png" alt="Freshlane Streetwear" width="300" height="300">
+    </section>
 
-<main>
-    <section class="featured-products">
-        <h2>Featured Products</h2>
-        <div class="product-grid">
-            <div class="product">
-                <img src="images/hoodie.png" alt="Freshlane Outfit 1" width="300" height="300">
-                <h3>Freshlane Outfit 1</h3>
+    <!-- Featured Products Section -->
+    <main>
+        <section class="featured-products">
+            <h2>Featured Products</h2>
+            <div class="product-grid">
+                <div class="product">
+                    <img src="Images/Hoodie.png" alt="Freshlane Outfit 1">
+                    <h3>Freshlane Outfit 1</h3>
+                </div>
+                <div class="product">
+                    <img src="Images/hoodie-and-cargo-pants.png" alt="Freshlane Outfit 2">
+                    <h3>Freshlane Outfit 2</h3>
+                </div>
             </div>
-            <div class="product">
-                <img src="images/hoodie-and-cargo-pants.png" alt="Freshlane Outfit 2" width="300" height="300">
-                <h3>Freshlane Outfit 2</h3>
+        </section>
+
+        <!-- About Preview -->
+        <section class="about-preview">
+            <h2>About Freshlane</h2>
+            <p>Freshlane is a youth-focused clothing brand dedicated to delivering comfort and style. Our hoodies and cargo pants are perfect for walking your lane in confidence.</p>
+            <a href="pages/about.html" class="cta-button">Learn More</a>
+        </section>
+
+        <!-- Why Choose Us -->
+        <section class="why-choose-us">
+            <h2>Why Choose Freshlane?</h2>
+            <ul>
+                <li>Trendy and comfortable streetwear</li>
+                <li>Affordable prices for quality outfits</li>
+                <li>Designed for the youth, by the youth</li>
+                <li>Express your individuality and walk your lane</li>
+            </ul>
+        </section>
+
+        <!-- Testimonials -->
+        <section class="testimonials">
+            <h2>What Our Customers Say</h2>
+            <div class="testimonial">
+                <p>"Freshlane hoodies are so comfy and stylish. I wear them every day!"</p>
+                <span>- Samantha</span>
             </div>
-        </div>
-    </section>
+            <div class="testimonial">
+                <p>"The cargo pants fit perfectly and look amazing. Love this brand!"</p>
+                <span>- Teko</span>
+            </div>
+        </section>
+    </main>
 
-    <section class="about-preview">
-        <h2>About Freshlane</h2>
-        <p>Freshlane is a youth-focused clothing brand dedicated to delivering comfort and style. Our hoodies and cargo pants are perfect for walking your lane in confidence.</p>
-        <a href="pages/about.html" class="cta-button">Learn More</a>
-    </section>
-
-    <section class="why-choose-us">
-        <h2>Why Choose Freshlane?</h2>
-        <ul>
-            <li>Trendy and comfortable streetwear</li>
-            <li>Affordable prices for quality outfits</li>
-            <li>Designed for the youth, by the youth</li>
-            <li>Express your individuality and walk your lane</li>
-        </ul>
-    </section>
-
-    <section class="testimonials">
-        <h2>What Our Customers Say</h2>
-        <div class="testimonial">
-            <p>"Freshlane hoodies are so comfy and stylish. I wear them every day!"</p>
-            <span>- Samantha</span>
-        </div>
-        <div class="testimonial">
-            <p>"The cargo pants fit perfectly and look amazing. Love this brand!"</p>
-            <span>- Teko</span>
-        </div>
-    </section>
-</main>
-
-<footer>
-    <p>&copy; 2025 Freshlane. Walk your lane.</p>
-    <p>Follow us on:  
-        <a href="#">Instagram</a> |  
-        <a href="#">Facebook</a> |  
-        <a href="#">TikTok</a>
-    </p>
-</footer>
-<script src="js/script.js"></script>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Freshlane. Walk your lane.</p>
+        <p>Follow us on:  
+            <a href="#">Instagram</a> |  
+            <a href="#">Facebook</a> |  
+            <a href="#">TikTok</a>
+        </p>
+    </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
-
