--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,66 +7,60 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-<header>
-    <h1>Freshlane</h1>
-    <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="products.html">Products</a></li>
-            <li><a href="enquiry.html">Enquiry</a></li>
-            <li><a href="contact.html" class="active">Contact</a></li>
-        </ul>
-    </nav>
-</header>
+    <!-- Header -->
+    <header>
+        <h1>Freshlane</h1>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="enquiry.html">Enquiry</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<main>
-    <section class="contact-info">
-        <h2>Contact Us</h2>
-        <ul>
-            <li><strong>Phone:</strong> 073 246 7742</li>
-            <li><strong>Email:</strong> leonmalatji13@gmail.com</li>
-            <li><strong>Address:</strong> Namakgale House 442</li>
-        </ul>
-    </section>
+    <main>
+        <section class="contact-info">
+            <h2>Contact Information</h2>
+            <ul>
+                <li>Email: <a href="mailto:info@freshlane.co.za">info@freshlane.co.za</a></li>
+                <li>Phone: <a href="tel:0732467742">073 246 7742</a></li>
+                <li>Address: 9 Tholo St, Mypark X9, Polokwane</li>
+            </ul>
+        </section>
 
-    <section class="social-media">
-        <h2>Follow Us</h2>
-        <ul>
-            <li><a href="#" target="_blank">Facebook</a></li>
-            <li><a href="#" target="_blank">Instagram</a></li>
-            <li><a href="https://wa.me/27732467742" target="_blank">WhatsApp</a></li>
-        </ul>
-    </section>
+        <section class="contact-form">
+            <h2>Send Us a Message</h2>
+            <form action="#" method="post">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" placeholder="Your Name" required>
 
-    <section class="contact-form">
-        <h2>Send Us a Message</h2>
-        <form>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" placeholder="Your Name" required>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="Your Email" required>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Your Email" required>
+                <label for="message">Message</label>
+                <textarea id="message" name="message" rows="5" placeholder="Type your message here..." required></textarea>
 
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </section>
 
-            <button type="submit">Send Message</button>
-        </form>
-    </section>
+        <section class="map-section">
+            <h2>Our Location</h2>
+            <div class="map-container">
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3647.1437049882657!2d29.446523675169207!3d-23.919964878555078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ec6d78ee8ac0271%3A0x96d935ece0419b17!2s9%20Tholo%20St%2C%20Mypark%20X9%2C%20Polokwane%2C%200699!5e0!3m2!1sen!2sza!4v1758901356311!5m2!1sen!2sza" 
+                    width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+        </section>
+    </main>
 
-    <section class="map">
-        <h2>Our Location</h2>
-        <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3647.1351583827827!2d29.447670074860536!3d-23.92026757855482!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ec6d78f047c4d85%3A0x951714086911dd12!2s32%20Tholo%20St%2C%20Mypark%20X9%2C%20Polokwane%2C%200699%2C%20South%20Africa!5e0!3m2!1sen!2sza!4v1756299456891!5m2!1sen!2sza" 
-            width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
-    </section>
-</main>
-
-<footer>
-    <p>&copy; 2025 Freshlane. Walk your lane.</p>
-</footer>
-<script src="../js/script.js"></script>
+    <footer>
+        <p>&copy; 2025 Freshlane. All rights reserved.</p>
+    </footer>
+    <script src="../js/script.js"></script>
 </body>
 </html>
