--- a/pages/products.html
+++ b/pages/products.html
@@ -7,58 +7,37 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-<header>
-    <h1>Freshlane</h1>
-    <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="products.html" class="active">Products</a></li>
-            <li><a href="enquiry.html">Enquiry</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <h1>Freshlane</h1>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="products.html" class="active">Products</a></li>
+                <li><a href="enquiry.html">Enquiry</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<main>
-    <section id="product-list">
-        <h2>Our Products</h2>
-        <div class="product-grid">
-            <div class="product">
-                <img src="../images/hoodie.png" alt="Freshlane Outfit 1">
-                <h3>Freshlane Outfit 1</h3>
+    <main>
+        <section id="product-list">
+            <h2>Our Products</h2>
+            <div class="product-grid">
+                <div class="product"><img src="../Images/Hoodie.png" alt="Freshlane Outfit 1"><h3>Freshlane Outfit 1</h3></div>
+                <div class="product"><img src="../Images/outfit-2.jpg" alt="Freshlane Outfit 2"><h3>Freshlane Outfit 2</h3></div>
+                <div class="product"><img src="../Images/outfit-3.jpg" alt="Freshlane Outfit 3"><h3>Freshlane Outfit 3</h3></div>
+                <div class="product"><img src="../Images/outfit-4.jpg" alt="Freshlane Outfit 4"><h3>Freshlane Outfit 4</h3></div>
+                <div class="product"><img src="../Images/outfit-5.jpg" alt="Freshlane Outfit 5"><h3>Freshlane Outfit 5</h3></div>
+                <div class="product"><img src="../Images/outfit-6.jpg" alt="Freshlane Outfit 6"><h3>Freshlane Outfit 6</h3></div>
+                <div class="product"><img src="../Images/hoodie-and-cargo-pants.png" alt="Freshlane Outfit 7"><h3>Freshlane Outfit 7</h3></div>
             </div>
-            <div class="product">
-                <img src="../images/outfit-6.jpg" alt="Freshlane Outfit 2">
-                <h3>Freshlane Outfit 2</h3>
-            </div>
-            <div class="product">
-                <img src="../images/outfit-3.jpg" alt="Freshlane Outfit 3">
-                <h3>Freshlane Outfit 3</h3>
-            </div>
-            <div class="product">
-                <img src="../images/outfit-4.jpg" alt="Freshlane Outfit 4">
-                <h3>Freshlane Outfit 4</h3>
-            </div>
-            <div class="product">
-                <img src="../images/outfit-5.jpg" alt="Freshlane Outfit 5">
-                <h3>Freshlane Outfit 5</h3>
-            </div>
-            <div class="product">
-                <img src="../images/outfit-2.jpg" alt="Freshlane Outfit 6">
-                <h3>Freshlane Outfit 6</h3>
-            </div>
-            <div class="product">
-                <img src="../images/hoodie-and-cargo-pants.png" alt="Freshlane Outfit 7">
-                <h3>Freshlane Outfit 7</h3>
-            </div>
-        </div>
-    </section>
-</main>
+        </section>
+    </main>
 
-<footer>
-    <p>&copy; 2025 Freshlane. All rights reserved.</p>
-</footer>
-<script src="../js/script.js"></script>
+    <footer>
+        <p>&copy; 2025 Freshlane. All rights reserved.</p>
+    </footer>
+    <script src="../js/script.js"></script>
 </body>
 </html>
