--- a/pages/about.html
+++ b/pages/about.html
@@ -34,7 +34,7 @@
             <h2>Our Mission & Vision</h2>
             <p><strong>Mission:</strong> To empower youth with trendy, comfortable clothing that boosts confidence and individuality.</p>
             <p><strong>Vision:</strong> To be South Africa's go-to streetwear brand that combines style, comfort, and affordability.</p>
-            <img src="../Images/mission-section.jpg" alt="Mission Vision" width="300" height="300">
+            <img src="../Images/mission section.jpg" alt="Mission Vision" width="300" height="300">
         </section>
 
         <!-- Meet the Team -->
@@ -46,12 +46,12 @@
                 <h4>Founder, Designer & Operations</h4>
             </div>
             <div class="team-member">
-                <img src="../Images/co-founder-watty.jpeg" alt="Watty - Co-Founder">
+                <img src="../Images/co-founder watty" alt="Watty - Co-Founder">
                 <h3>Watty Sithagu</h3>
                 <h4>Co-Founder & Sales</h4>
             </div>
             <div class="team-member">
-                <img src="../Images/co-founder-privilege.jpeg" alt="Privilege - Co-Founder">
+                <img src="../Images/co founder priv" alt="Privilege - Co-Founder">
                 <h3>Privilege Sithagu</h3>
                 <h4>Co-Founder & Marketing</h4>
             </div>
