--- a/pages/products.html
+++ b/pages/products.html
@@ -24,7 +24,7 @@
         <section id="product-list">
             <h2>Our Products</h2>
             <div class="product-grid">
-                <div class="product"><img src="../images/outfit.jpg" alt="Freshlane Outfit 1"><h3>Freshlane Outfit 1</h3></div>
+                <div class="product"><img src="../images/outfit.jpg" alt="Freshlane Outfit 1" width="300"><h3>freshlane Outfit 1</h3></div>
                 <div class="product"><img src="../images/outfit 2.jpg" alt="Freshlane Outfit 2"><h3>Freshlane Outfit 2</h3></div>
                 <div class="product"><img src="../images/outfit 3.jpg" alt="Freshlane Outfit 3"><h3>Freshlane Outfit 3</h3></div>
                 <div class="product"><img src="../images/outfit 4.jpg" alt="Freshlane Outfit 4"><h3>Freshlane Outfit 4</h3></div>
