--- a/pages/about.html
+++ b/pages/about.html
@@ -10,6 +10,7 @@
     <!-- Header -->
     <header>
         <h1>Freshlane</h1>
+        <div class="hamburger" id="hamburger">☰</div>
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
@@ -26,7 +27,7 @@
         <section id="history">
             <h2>Our Story</h2>
             <p>Freshlane was founded in 2024 with a passion for stylish and affordable streetwear. Our goal is to create quality hoodies and cargo pants that let every youth express their unique style while walking their lane.</p>
-            <img src="../Images/Hoodie.png" alt="Freshlane History" width="400">
+            <img src="../images/hoodie.png" alt="Freshlane History" width="400">
         </section>
 
         <!-- Mission & Vision -->
@@ -34,24 +35,24 @@
             <h2>Our Mission & Vision</h2>
             <p><strong>Mission:</strong> To empower youth with trendy, comfortable clothing that boosts confidence and individuality.</p>
             <p><strong>Vision:</strong> To be South Africa's go-to streetwear brand that combines style, comfort, and affordability.</p>
-            <img src="../Images/mission section.jpg" alt="Mission Vision" width="300" height="300">
+            <img src="../images/mission-section.jpg" alt="Mission Vision" width="300" height="300">
         </section>
 
         <!-- Meet the Team -->
         <section id="team">
             <h2>Meet Our Team</h2>
             <div class="team-member">
-                <img src="../Images/Leon-founder.jpeg" alt="Leon - Founder">
+                <img src="../images/leon-founder.jpeg" alt="Leon - Founder">
                 <h3>LEON MALATJI</h3>
                 <h4>Founder, Designer & Operations</h4>
             </div>
             <div class="team-member">
-                <img src="../Images/co-founder watty" alt="Watty - Co-Founder">
+                <img src="../images/co-founder-watty.jpeg" alt="Watty - Co-Founder">
                 <h3>Watty Sithagu</h3>
                 <h4>Co-Founder & Sales</h4>
             </div>
             <div class="team-member">
-                <img src="../Images/co founder priv" alt="Privilege - Co-Founder">
+                <img src="../images/co-founder-privilege.jpeg" alt="Privilege - Co-Founder">
                 <h3>Privilege Sithagu</h3>
                 <h4>Co-Founder & Marketing</h4>
             </div>
