--- a/pages/products.html
+++ b/pages/products.html
@@ -1,43 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products - Freshlane</title>
-    <link rel="stylesheet" href="../css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Products - Freshlane</title>
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header>
-        <h1>Freshlane</h1>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="products.html" class="active">Products</a></li>
-                <li><a href="enquiry.html">Enquiry</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <h1>Freshlane</h1>
+    <div class="hamburger" id="hamburger">☰</div>
+    <nav id="nav-menu">
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="products.html" class="active">Products</a></li>
+        <li><a href="enquiry.html">Enquiry</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <main>
-        <section id="product-list">
-            <h2>Our Products</h2>
-            <div class="product-grid">
-                <div class="product"><img src="../images/outfit.jpg" alt="Freshlane Outfit 1" width="300"><h3>freshlane Outfit 1</h3></div>
-                <div class="product"><img src="../images/outfit 2.jpg" alt="Freshlane Outfit 2"><h3>Freshlane Outfit 2</h3></div>
-                <div class="product"><img src="../images/outfit 3.jpg" alt="Freshlane Outfit 3"><h3>Freshlane Outfit 3</h3></div>
-                <div class="product"><img src="../images/outfit 4.jpg" alt="Freshlane Outfit 4"><h3>Freshlane Outfit 4</h3></div>
-                <div class="product"><img src="../images/outfit 5.jpg" alt="Freshlane Outfit 5"><h3>Freshlane Outfit 5</h3></div>
-                <div class="product"><img src="../images/outfit 6.jpg" alt="Freshlane Outfit 6"><h3>Freshlane Outfit 6</h3></div>
-                <div class="product"><img src="../images/hoodie and cargo pants.png" alt="Freshlane Outfit 7"><h3>Freshlane Outfit 7</h3></div>
-            </div>
-        </section>
-    </main>
+  <main>
+    <section class="product-page">
+      <h2>Our Streetwear Collection</h2>
+      <div class="product-grid">
+        <div class="product">
+          <img src="../images/hoodie.png" alt="Freshlane Hoodie">
+          <h3>Freshlane Hoodie</h3>
+          <p>R550 - Comfortable cotton hoodie for daily wear.</p>
+        </div>
 
-    <footer>
-        <p>&copy; 2025 Freshlane. All rights reserved.</p>
-    </footer>
-    <script src="../js/script.js"></script>
+        <div class="product">
+          <img src="../images/hoodie-and-cargo-pants.png" alt="Cargo Combo">
+          <h3>Cargo Combo</h3>
+          <p>R950 - Hoodie and cargo pants combo, trendy and stylish.</p>
+        </div>
+
+        <div class="product">
+          <img src="../images/freshlane-cargos.png" alt="Cargo Pants">
+          <h3>Freshlane Cargo Pants</h3>
+          <p>R600 - Durable, flexible, and perfect for all seasons.</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Freshlane. Walk your lane.</p>
+  </footer>
+
+  <script src="../js/script.js"></script>
 </body>
 </html>
