--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="hero">
         <h2>Welcome to Freshlane</h2>
         <p>Your go-to streetwear brand for hoodies & cargo pants. Walk your lane with style!</p>
-        <img src="images/Freshlane Logo Design.png"Freshlane Streetwear width="300" height="300">
+        <img src="images/freshlane-logo-design.png" alt="Freshlane Streetwear" width="300" height="300">
     </section>
 
     <!-- Featured Products Section -->
@@ -35,11 +35,11 @@
             <h2>Featured Products</h2>
             <div class="product-grid">
                 <div class="product">
-                    <img src="images/Hoodie.png" alt="Freshlane Outfit 1">
+                    <img src="images/hoodie.png" alt="Freshlane Outfit 1">
                     <h3>Freshlane Outfit 1</h3>
                 </div>
                 <div class="product">
-                    <img src="images/hoodie and cargo pants.png" "Freshlane outfit 2" >
+                    <img src="images/hoodie-and-cargo-pants.png" alt="Freshlane Outfit 2">
                     <h3>Freshlane Outfit 2</h3>
                 </div>
             </div>
