--- a/pages/enquiry.html
+++ b/pages/enquiry.html
@@ -1,51 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enquiry - Freshlane</title>
-    <link rel="stylesheet" href="../css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Enquiry - Freshlane</title>
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        <h1>Freshlane</h1>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="enquiry.html" class="active">Enquiry</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <h1>Freshlane</h1>
+    <div class="hamburger" id="hamburger">☰</div>
+    <nav id="nav-menu">
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="enquiry.html" class="active">Enquiry</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <main>
-        <section class="enquiry-section">
-            <h2>Product Enquiry</h2>
-            <p>If you have questions about our products, sizes, or availability, fill out the form below and we’ll get back to you.</p>
-            <form action="#" method="post">
-                <label for="fullname">Full Name</label>
-                <input type="text" id="fullname" name="fullname" placeholder="Your Name" required>
+  <main>
+    <section class="enquiry-section">
+      <h2>Submit Your Enquiry</h2>
+      <form class="enquiry-form">
+        <label for="name">Full Name</label>
+        <input type="text" id="name" name="name" placeholder="Your name..." required>
 
-                <label for="email">Email Address</label>
-                <input type="email" id="email" name="email" placeholder="Your Email" required>
+        <label for="email">Email Address</label>
+        <input type="email" id="email" name="email" placeholder="Your email..." required>
 
-                <label for="product">Product of Interest</label>
-                <input type="text" id="product" name="product" placeholder="Which product?" required>
+        <label for="message">Your Message</label>
+        <textarea id="message" name="message" placeholder="Type your message here..." rows="6" required></textarea>
 
-                <label for="message">Message</label>
-                <textarea id="message" name="message" rows="5" placeholder="Your questions..." required></textarea>
+        <button type="submit">Submit Enquiry</button>
+      </form>
+    </section>
+  </main>
 
-                <button type="submit">Submit Enquiry</button>
-            </form>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2025 Freshlane. All rights reserved.</p>
-    </footer>
-    <script src="../js/script.js"></script>
+  <footer>
+    <p>&copy; 2025 Freshlane. All rights reserved.</p>
+  </footer>
+  <script src="../js/script.js"></script>
 </body>
 </html>
