--- a/index.html
+++ b/index.html
@@ -3,89 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Freshlane | Walk Your Lane</title>
+    <title>Freshlane</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        <h1>Freshlane</h1>
-        <div class="hamburger" id="hamburger">☰</div>
-        <nav id="nav-menu">
-            <ul>
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="pages/about.html">About Us</a></li>
-                <li><a href="pages/products.html">Products</a></li>
-                <li><a href="pages/enquiry.html">Enquiry</a></li>
-                <li><a href="pages/contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <!-- Hero Section -->
-    <section id="hero">
-        <h2>Welcome to Freshlane</h2>
-        <p>Your go-to streetwear brand for hoodies & cargo pants. Walk your lane with style!</p>
-        <img src="images/freshlane-logo-design.png" alt="Freshlane Streetwear" width="300" height="300">
-    </section>
+<header>
+    <h1>Freshlane</h1>
+    <nav>
+        <ul id="nav-links">
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="pages/products.html">Products</a></li>
+            <li><a href="pages/team.html">Team</a></li>
+            <li><a href="pages/about.html">About</a></li>
+            <li><a href="pages/enquiry.html">Enquiry</a></li>
+        </ul>
+        <div class="hamburger" id="hamburger">&#9776;</div>
+    </nav>
+</header>
 
-    <!-- Featured Products Section -->
-    <main>
-        <section class="featured-products">
-            <h2>Featured Products</h2>
-            <div class="product-grid">
-                <div class="product">
-                    <img src="images/hoodie.png" alt="Freshlane Outfit 1">
-                    <h3>Freshlane Outfit 1</h3>
-                </div>
-                <div class="product">
-                    <img src="images/hoodie-and-cargo-pants.png" alt="Freshlane Outfit 2">
-                    <h3>Freshlane Outfit 2</h3>
-                </div>
-            </div>
-        </section>
+<section id="hero">
+    <h2>Walk Your Lane</h2>
+    <p>Freshlane is a premium youth clothing brand bringing you hoodies, cargos, and streetwear to stand out and express yourself.</p>
+    <img src="images/Freshlane Logo Design.png" alt="Freshlane Logo" style="max-width:300px; margin-top:20px;">
+</section>
 
-        <!-- About Preview -->
-        <section class="about-preview">
-            <h2>About Freshlane</h2>
-            <p>Freshlane is a youth-focused clothing brand dedicated to delivering comfort and style. Our hoodies and cargo pants are perfect for walking your lane in confidence.</p>
-            <a href="pages/about.html" class="cta-button">Learn More</a>
-        </section>
+<section id="products-home">
+    <h2 style="text-align:center; margin-bottom:20px;">Our Top Products</h2>
+    <div class="product-grid">
+        <div class="product">
+            <img src="images/Hoodie.png" alt="Hoodie">
+            <h3>Hoodie</h3>
+        </div>
+        <div class="product">
+            <img src="images/outfit 2.jpg" alt="Outfit 2">
+            <h3>Outfit 2</h3>
+        </div>
+        <div class="product">
+            <img src="images/outfit 3.jpg" alt="Outfit 3">
+            <h3>Outfit 3</h3>
+        </div>
+    </div>
+</section>
 
-        <!-- Why Choose Us -->
-        <section class="why-choose-us">
-            <h2>Why Choose Freshlane?</h2>
-            <ul>
-                <li>Trendy and comfortable streetwear</li>
-                <li>Affordable prices for quality outfits</li>
-                <li>Designed for the youth, by the youth</li>
-                <li>Express your individuality and walk your lane</li>
-            </ul>
-        </section>
 
-        <!-- Testimonials -->
-        <section class="testimonials">
-            <h2>What Our Customers Say</h2>
-            <div class="testimonial">
-                <p>"Freshlane hoodies are so comfy and stylish. I wear them every day!"</p>
-                <span>- Samantha</span>
-            </div>
-            <div class="testimonial">
-                <p>"The cargo pants fit perfectly and look amazing. Love this brand!"</p>
-                <span>- Teko</span>
-            </div>
-        </section>
-    </main>
+<script src="js/script.js"></script>
+<footer>
+    <p>&copy; 2025 Freshlane. All rights reserved.
+        <a href="pages/enquiry.html">Contact Us</a>
+        <span id="datetime" class="footer-datetime"></span>
+    </p>
+</footer>
 
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2025 Freshlane. Walk your lane.</p>
-        <p>Follow us on:  
-            <a href="#">Instagram</a> |  
-            <a href="#">Facebook</a> |  
-            <a href="#">TikTok</a>
-        </p>
-    </footer>
-    <script src="js/script.js"></script>
 </body>
 </html>
