--- a/pages/about.html
+++ b/pages/about.html
@@ -3,61 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Freshlane</title>
+    <title>About - Freshlane</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        <h1>Freshlane</h1>
-        <div class="hamburger" id="hamburger">☰</div>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="about.html" class="active">About Us</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="enquiry.html">Enquiry</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <main>
-        <!-- Our Story -->
-        <section id="history">
-            <h2>Our Story</h2>
-            <p>Freshlane was founded in 2024 with a passion for stylish and affordable streetwear. Our goal is to create quality hoodies and cargo pants that let every youth express their unique style while walking their lane.</p>
-            <img src="../images/hoodie.png" alt="Freshlane History" width="400">
-        </section>
+<header>
+    <h1>Freshlane</h1>
+    <nav>
+        <ul id="nav-links">
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="team.html">Team</a></li>
+            <li><a href="about.html" class="active">About</a></li>
+            <li><a href="enquiry.html">Enquiry</a></li>
+        </ul>
+        <div class="hamburger" id="hamburger">&#9776;</div>
+    </nav>
+</header>
 
-        <!-- Mission & Vision -->
-        <section id="mission-vision">
-            <h2>Our Mission & Vision</h2>
-            <p><strong>Mission:</strong> To empower youth with trendy, comfortable clothing that boosts confidence and individuality.</p>
-            <p><strong>Vision:</strong> To be South Africa's go-to streetwear brand that combines style, comfort, and affordability.</p>
-            <img src="../images/mission-section.jpg" alt="Mission Vision" width="300" height="300">
-        </section>
-
-        <!-- Meet the Team -->
-        <section id="team">
-            <h2>Meet Our Team</h2>
-            <div class="team-member">
-                <img src="../images/leon-founder.jpeg" alt="Leon - Founder">
-                <h3>LEON MALATJI</h3>
-                <h4>Founder, Designer & Operations</h4>
-            </div>
-            <div class="team-member">
-                <img src="../images/co-founder-watty.jpeg" alt="Watty - Co-Founder">
-                <h3>Watty Sithagu</h3>
-                <h4>Co-Founder & Sales</h4>
-            </div>
-            <div class="team-member">
-                <img src="../images/co-founder-privilege.jpeg" alt="Privilege - Co-Founder">
-                <h3>Privilege Sithagu</h3>
-                <h4>Co-Founder & Marketing</h4>
-            </div>
-        </section>
-
+<section id="about" style="max-width:800px; margin:40px auto; text-align:center;">
+    <h2>Our Story</h2>
+    <img src="../images/our-story.jpg" alt="Our Story" style="margin:13px 0; border-radius:9px;">
+    <p>Freshlane was born to give youths the freedom to express themselves through premium streetwear.
+         We focus on hoodies, cargos, and stylish outfits that combine comfort and style for the modern youth.</p>
+</section>
         <section class="map-section">
             <h2>Find Us</h2>
             <div class="map-container">
@@ -67,11 +37,15 @@
                 </iframe>
             </div>
         </section>
-    </main>
+       
 
-    <footer>
-        <p>&copy; 2025 Freshlane. All rights reserved.</p>
-    </footer>
-    <script src="../js/script.js"></script>
+<script src="../js/script.js"></script>
+ <footer>
+    <p>&copy; 2025 Freshlane. All rights reserved.
+        <a href="enquiry.html">Contact Us</a>
+        <span id="datetime" class="footer-datetime"></span>
+    </p>
+</footer>
+
 </body>
 </html>
