--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,44 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us - Freshlane</title>
-  <link rel="stylesheet" href="../css/style.css">
-</head>
-<body>
-  <header>
-    <h1>Freshlane</h1>
-    <div class="hamburger" id="hamburger">☰</div>
-    <nav id="nav-menu">
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="enquiry.html">Enquiry</a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <section class="contact-info">
-      <h2>Contact Us</h2>
-      <p><strong>Email:</strong> info@freshlane.co.za</p>
-      <p><strong>Phone:</strong> +27 73 246 7742</p>
-      <p><strong>Address:</strong> Namakgale House 442, Polokwane</p>
-
-      <h3>Find us on the map:</h3>
-      <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3647.1437049882657!2d29.446523675169207!3d-23.919964878555078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ec6d78ee8ac0271%3A0x96d935ece0419b17!2s9%20Tholo%20St%2C%20Mypark%20X9%2C%20Polokwane%2C%200699!5e0!3m2!1sen!2sza!4v1758901356311!5m2!1sen!2sza"
-        width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy">
-      </iframe>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Freshlane. Walk your lane.</p>
-  </footer>
-  <script src="../js/script.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang='en'><head><meta charset='UTF-8'><title>Freshlane - Contact</title><link rel='../stylesheet/style.css'></head><body><h1>Contact Page</h1></body></html>
