--- a/pages/enquiry.html
+++ b/pages/enquiry.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Enquiry - Freshlane</title>
-  <link rel="stylesheet" href="../css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Enquiry - Freshlane</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-  <header>
+
+<header>
     <h1>Freshlane</h1>
-    <div class="hamburger" id="hamburger">☰</div>
-    <nav id="nav-menu">
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="enquiry.html" class="active">Enquiry</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+    <nav>
+        <ul id="nav-links">
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="team.html">Team</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="enquiry.html" class="active">Enquiry</a></li>
+        </ul>
+        <div class="hamburger" id="hamburger">&#9776;</div>
     </nav>
-  </header>
+</header>
 
-  <main>
-    <section class="enquiry-section">
-      <h2>Submit Your Enquiry</h2>
-      <form class="enquiry-form">
-        <label for="name">Full Name</label>
-        <input type="text" id="name" name="name" placeholder="Your name..." required>
+<section id="enquiry" style="max-width:600px; margin:40px auto;">
+    <h2 style="text-align:center; margin-bottom:20px;">Contact Us</h2>
+    <form>
+        <input type="text" name="name" placeholder="Full Name" required>
+        <input type="email" name="email" placeholder="Email Address" required>
+        <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
+        <button type="submit">Send Enquiry</button>
+    </form>
+</section>
 
-        <label for="email">Email Address</label>
-        <input type="email" id="email" name="email" placeholder="Your email..." required>
 
-        <label for="message">Your Message</label>
-        <textarea id="message" name="message" placeholder="Type your message here..." rows="6" required></textarea>
 
-        <button type="submit">Submit Enquiry</button>
-      </form>
-    </section>
-  </main>
 
-  <footer>
-    <p>&copy; 2025 Freshlane. All rights reserved.</p>
-  </footer>
-  <script src="../js/script.js"></script>
+<script src="../js/script.js"></script>
+    <footer>
+    <p>&copy; 2025 Freshlane. All rights reserved.
+        <a href="enquiry.html">Contact Us</a>
+        <span id="datetime" class="footer-datetime"></span>
+    </p>
+</footer>
+
 </body>
 </html>
