--- a/pages/products.html
+++ b/pages/products.html
@@ -33,30 +33,32 @@
             <img src="../images/outfit 2.jpg" alt="Outfit 2">
             <h3>Outfit 2</h3>
         </div>
-        
         <div class="product">
             <img src="../images/outfit 3.jpg" alt="Outfit 3">
             <h3>Outfit 3</h3>
-
-        <div class="product">
+      </div>
+      <div class="product">
             <img src="../images/outfit 5.jpg" alt="Outfit 5">
             <h3>Outfit 4</h3>
         </div>
         <div class="product">
             <img src="../images/outfit 6.jpg" alt="Outfit 6">
             <h3>Outfit 5</h3>
-    </div>
+        </div>
+        
 </section>
-
-
-
-<script src="../js/script.js"></script>
-<footer>
-    <p>&copy; 2025 Freshlane. All rights reserved.
+     <script src="../js/script.js"></script>
+ <footer>
+         <p>&copy; 2025 Freshlane. All rights reserved.
         <a href="enquiry.html">Contact Us</a>
-        <span id="datetime" class="footer-datetime"></span>
-    </p>
+        <span id="datetime" class="footer-datetime"></span> </p>
+
 </footer>
+<!-- Image Preview Popup -->
+<div id="imgPreview" class="img-preview">
+    <span id="closePreview">&times;</span>
+    <img id="previewImg" src="" alt="Preview">
+</div>
 
 </body>
 </html>
