--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Freshlane</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
 <header>
@@ -18,27 +19,35 @@
             <li><a href="pages/about.html">About</a></li>
             <li><a href="pages/enquiry.html">Enquiry</a></li>
         </ul>
+
         <div class="hamburger" id="hamburger">&#9776;</div>
     </nav>
 </header>
 
+<!-- HERO SECTION -->
 <section id="hero">
     <h2>Walk Your Lane</h2>
-    <p>Freshlane is a premium youth clothing brand bringing you hoodies, cargos, and streetwear to stand out and express yourself.</p>
-    <img src="images/Freshlane Logo Design.png" alt="Freshlane Logo" style="max-width:300px; margin-top:20px;">
+    <p>Freshlane is a premium youth clothing brand bringing you hoodies, cargos, and streetwear 
+       to stand out and express yourself.</p>
+
+    <img src="images/Freshlane Logo Design.png" alt="Freshlane Logo">
 </section>
 
-<section id="products-home">
+<!-- TOP PRODUCTS -->
+<section id="products-home" class="fade-section">
     <h2 style="text-align:center; margin-bottom:20px;">Our Top Products</h2>
+
     <div class="product-grid">
         <div class="product">
             <img src="images/Hoodie.png" alt="Hoodie">
             <h3>Hoodie</h3>
         </div>
+
         <div class="product">
             <img src="images/outfit 2.jpg" alt="Outfit 2">
             <h3>Outfit 2</h3>
         </div>
+
         <div class="product">
             <img src="images/outfit 3.jpg" alt="Outfit 3">
             <h3>Outfit 3</h3>
@@ -46,8 +55,8 @@
     </div>
 </section>
 
-
 <script src="js/script.js"></script>
+
 <footer>
     <p>&copy; 2025 Freshlane. All rights reserved.
         <a href="pages/enquiry.html">Contact Us</a>
