--- a/pages/about.html
+++ b/pages/about.html
@@ -22,25 +22,39 @@
     </nav>
 </header>
 
-<section id="about" style="max-width:800px; margin:40px auto; text-align:center;">
+<section id="about">
     <h2>Our Story</h2>
-    <img src="../images/our-story.jpg" alt="Our Story" style="margin:13px 0; border-radius:9px;">
-    <p>Freshlane was born to give youths the freedom to express themselves through premium streetwear.
-         We focus on hoodies, cargos, and stylish outfits that combine comfort and style for the modern youth.</p>
+
+    <div class="about-container">
+        <img src="../images/our-story.jpg" alt="Our Story" class="about-image">
+
+        <p class="about-text">
+            Freshlane was created with one mission —  
+            <strong>to inspire the youth to walk their own lane with confidence, style and identity.</strong>  
+            <br><br>
+            We specialise in premium streetwear including hoodies, cargo pants, and everyday stylish outfits.  
+            Our designs blend <strong>comfort, authenticity, and modern street culture</strong> to empower the new generation.  
+            <br><br>
+            At Freshlane, fashion is more than clothing —  
+            <strong>it's a lifestyle, a statement, and a personal journey.</strong>
+        </p>
+    </div>
 </section>
-        <section class="map-section">
-            <h2>Find Us</h2>
-            <div class="map-container">
-                <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3647.1437049882657!2d29.446523675169207!3d-23.919964878555078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ec6d78ee8ac0271%3A0x96d935ece0419b17!2s9%20Tholo%20St%2C%20Mypark%20X9%2C%20Polokwane%2C%200699!5e0!3m2!1sen!2sza!4v1758901356311!5m2!1sen!2sza" 
-                    width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
-            </div>
-        </section>
-       
+
+<section class="map-section">
+    <h2>Find Us</h2>
+    <div class="map-container">
+        <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3647.1437049882657!2d29.446523675169207!3d-23.919964878555078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ec6d78ee8ac0271%3A0x96d935ece0419b17!2s9%20Tholo%20St%2C%20Mypark%20X9%2C%20Polokwane%2C%200699!5e0!3m2!1sen!2sza!4v1758901356311!5m2!1sen!2sza" 
+            width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+    </div>
+</section>
 
 <script src="../js/script.js"></script>
- <footer>
+
+<footer>
     <p>&copy; 2025 Freshlane. All rights reserved.
         <a href="enquiry.html">Contact Us</a>
         <span id="datetime" class="footer-datetime"></span>
