--- a/pages/team.html
+++ b/pages/team.html
@@ -22,27 +22,34 @@
     </nav>
 </header>
 
-<section id="team" style="max-width:1000px; margin:40px auto;">
-    <h2 style="text-align:center; margin-bottom:20px;">Meet Our Team</h2>
-    <div class="team-member">
-        <img src="../images/Leon-founder.jpeg" alt="Founder Leon">
-        <h3>Leon</h3>
+<section id="team">
+    <h2>Meet Our Team</h2>
 
-     <div class="team-member">
-             <img src="../images/co-founder watty" alt="Watty - Co-Founder">
-             <h3>Watty Sithagu</h3>
-              <h4>Co-Founder & Sales</h4>
-      </div>
+    <div class="team-container">
+        
+        <div class="team-member">
+            <img src="../images/Leon-founder.jpeg" alt="Founder Leon">
+            <h3>Leon</h3>
+            <h4>Founder & CEO</h4>
+        </div>
 
-      <div class="team-member">
-             <img src="../images/co founder priv" alt="Privilege - Co-Founder">
-                <h3>Privilege Sithagu</h3>
-                <h4>Co-Founder & Marketing</h4>
-     </div>
+        <div class="team-member">
+            <img src="../images/co-founder watty" alt="Watty - Co-Founder">
+            <h3>Watty Sithagu</h3>
+            <h4>Co-Founder & Sales</h4>
+        </div>
+
+        <div class="team-member">
+            <img src="../images/co founder priv" alt="Privilege - Co-Founder">
+            <h3>Privilege Sithagu</h3>
+            <h4>Co-Founder & Marketing</h4>
+        </div>
+
     </div>
 </section>
-        
+
 <script src="../js/script.js"></script>
+
 <footer>
     <p>&copy; 2025 Freshlane. All rights reserved.
         <a href="enquiry.html">Contact Us</a>
