--- a/pages/enquiry.html
+++ b/pages/enquiry.html
@@ -1,47 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enquiry - Freshlane</title>
-    <link rel="stylesheet" href="../css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Enquiry - Freshlane</title>
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
 <header>
-    <h1>Freshlane</h1>
-    <nav>
-        <ul id="nav-links">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="products.html">Products</a></li>
-            <li><a href="team.html">Team</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="enquiry.html" class="active">Enquiry</a></li>
-        </ul>
-        <div class="hamburger" id="hamburger">&#9776;</div>
-    </nav>
+  <h1>Freshlane</h1>
+  <nav>
+    <ul id="nav-links">
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="products.html">Products</a></li>
+      <li><a href="team.html">Team</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="enquiry.html" class="active">Enquiry</a></li>
+    </ul>
+    <div class="hamburger" id="hamburger">&#9776;</div>
+  </nav>
 </header>
 
 <section id="enquiry" style="max-width:600px; margin:40px auto;">
-    <h2 style="text-align:center; margin-bottom:20px;">Contact Us</h2>
-    <form>
-        <input type="text" name="name" placeholder="Full Name" required>
-        <input type="email" name="email" placeholder="Email Address" required>
-        <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
-        <button type="submit">Send Enquiry</button>
-    </form>
+  <h2 style="text-align:center; margin-bottom:20px;">Contact Us</h2>
+  <form id="enquiryForm">
+    <input type="text" name="name" placeholder="Full Name" required>
+    <input type="email" name="email" placeholder="Email Address" required>
+    <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
+    <button type="submit">Send Enquiry</button>
+  </form>
 </section>
 
-
-
-
-<script src="../js/script.js"></script>
-    <footer>
-    <p>&copy; 2025 Freshlane. All rights reserved.
-        <a href="enquiry.html">Contact Us</a>
-        <span id="datetime" class="footer-datetime"></span>
-    </p>
+<footer>
+  <p>&copy; 2025 Freshlane. All rights reserved.
+    <a href="enquiry.html">Contact Us</a>
+    <span id="datestamp"></span> |
+    <span id="time"></span>
+  </p>
 </footer>
+
+<!-- 🔥 REAL WORKING DATE + TIME SCRIPT -->
+<script>
+  function displayDate() {
+    const today = new Date();
+    document.getElementById("datestamp").innerHTML =
+      "Today's Date: " + today.toDateString();
+  }
+  displayDate();
+
+  function displayTime() {
+    const now = new Date();
+    let h = String(now.getHours()).padStart(2, '0');
+    let m = String(now.getMinutes()).padStart(2, '0');
+    let s = String(now.getSeconds()).padStart(2, '0');
+    document.getElementById("time").textContent = h + ":" + m + ":" + s;
+  }
+  setInterval(displayTime, 1000);
+  displayTime();
+</script>
 
 </body>
 </html>
