--- a/index.html
+++ b/index.html
@@ -3,7 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Freshlane</title>
+    
+    <!-- SEO Meta Tags -->
+    <title>Freshlane | Walk Your Lane - Youth Streetwear</title>
+    <meta name="description" content="Freshlane is a youth-focused streetwear brand offering hoodies, cargo pants, and streetwear. Shop online and walk your lane with confidence.">
+    <meta name="keywords" content="Freshlane, streetwear, youth fashion, hoodies, cargo pants, trendy clothing, Walk Your Lane">
+    <meta name="author" content="Leon Malatji">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Freshlane | Walk Your Lane - Youth Streetwear">
+    <meta property="og:description" content="Discover Freshlane, the youth streetwear brand with hoodies, cargos, and stylish streetwear. Stand out and express yourself.">
+    <meta property="og:image" content="images/Freshlane Logo Design.png">
+    <meta property="og:url" content="https://saturoleon.github.io/Freshlane-poe/index.html">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Freshlane | Walk Your Lane - Youth Streetwear">
+    <meta name="twitter:description" content="Freshlane is a youth-focused streetwear brand offering hoodies, cargo pants, and streetwear. Shop online and walk your lane with confidence.">
+    <meta name="twitter:image" content="images/Freshlane Logo Design.png">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="images/Freshlane Logo Design.png">
+
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
